--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,27 +1,29 @@
 name: Build
 on:
   push:
-    tags:
-    - '*'
+    branches:
+    - master
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
+    name: Build
     steps:
     - uses: actions/checkout@v3
+    - uses: google-github-actions/auth@v1
+      id: auth
       with:
-        fetch-depth: 0
-    - uses: actions/setup-go@v4
+        credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+        token_format: access_token
+    - uses: docker/login-action@v1
       with:
-        go-version: "^1.20"
-    - uses: goreleaser/goreleaser-action@v4
+        registry: asia-southeast1-docker.pkg.dev
+        username: oauth2accesstoken
+        password: ${{ steps.auth.outputs.access_token }}
+    - uses: docker/setup-buildx-action@v2
       with:
         version: latest
-        args: release --clean
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions/upload-artifact@v3
+    - uses: docker/build-push-action@v4
       with:
-        name: deploys
-        path: dist/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        provenance: false
+        push: true
+        tags: asia-southeast1-docker.pkg.dev/deploys-app/public/cli:${{ github.sha }}
